
	* CCF/CCF/IDL2/Parser.cpp:
	* CCF/CCF/IDL2/Parser.hpp:
	* CCF/CCF/IDL2/SemanticAction.hpp:
	* CCF/CCF/IDL2/SemanticGraph.hpp:
	* CCF/CCF/IDL2/Traversal.hpp:
	* CCF/CCF/IDL2/SemanticAction/Factory.hpp:
	* CCF/CCF/IDL2/SemanticAction/ValueTypeMember.hpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/Factory.cpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/Factory.hpp:
	* CCF/CCF/IDL2/SemanticGraph/ValueTypeMember.cpp:
	* CCF/CCF/IDL2/SemanticGraph/ValueTypeMember.hpp:
	* CCF/CCF/IDL2/Traversal/ValueTypeMember.hpp:
	* CCF/CCF/IDL2/Traversal/ValueTypeMember.tpp:

	First part of the "full" support for members in valuetypes.


Thu Mar 17 10:18:33 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ExecutorMappingGenerator.cpp:
        * CIDLC/Literals.cpp:
        * CIDLC/Literals.hpp:
        * CIDLC/ServantGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/TypeNameEmitter.cpp:
        * CIDLC/TypeNameEmitter.hpp:

          Added command line option 'custom-container' to the CIDL
          compiler backend, and code generation to execute if the
          argument to the new option is 'upgradeable'. CIAO
          infrastructure changes to support dynamic component
          swapping will be merged from a branch shortly - these
          CIDL compiler changes will not affect any existing builds
          or tests since they don't use the new command line option.

Fri Mar 11 10:33:28 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* docs/schema/cdp.xsd

	Corrected an incorrect element in the schema.

Fri Mar 11 12:01:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentsC.h:
        * ciao/ComponentsS.h:
        * DAnCE/ciao/ComponentsC.h:
        * DAnCE/ciao/ComponentsS.h:
        * DAnCE/NodeManager/NodeDaemon_Impl.h:
        * performance-tests/Benchmark/LatencyTest.h:
        * performance-tests/Benchmark/RoundTripServer/LatencyTest.h:
          Changed _MSC_VER check
